// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`headers can append headers 1`] = `
Object {
  "/*": Array [
    "X-Frame-Options: DENY",
    "X-XSS-Protection: 1; mode=block",
    "X-Content-Type-Options: nosniff",
    "X-UA-Compatible: ie=edge",
    "Access-Control-Allow-Origin: *",
    "Referrer-Policy: origin",
  ],
}
`;

exports[`headers can append headers 2`] = `
Object {
  "/*": Array [
    "X-Frame-Options: DENY",
    "X-XSS-Protection: 1; mode=block",
    "X-Content-Type-Options: nosniff",
    "X-UA-Compatible: ie=edge",
    "Access-Control-Allow-Origin: *",
    "Referrer-Policy: origin",
    "X-Frame-Options: SAMEORIGIN",
  ],
}
`;

exports[`headers can create header content 1`] = `
"/static/*
  Cache-Control: public, max-age=31536000, immutable

"
`;

exports[`headers can create header content 2`] = `
"/templates/index.html
  X-Frame-Options: DENY
  X-XSS-Protection: 1; mode=block

"
`;

exports[`headers can create header content 3`] = `
"/something/*
  Basic-Auth: someuser:somepassword anotheruser:anotherpassword

"
`;

exports[`headers can create header content 4`] = `
"/*
  Link: </style.css>; rel=preload; as=style
  Link: </main.js>; rel=preload; as=script
  Link: </image.jpg>; rel=preload; as=image

"
`;
